--- a/public/views/attached_skills_manager.html
+++ b/public/views/attached_skills_manager.html
@@ -14,6 +14,7 @@
 <body ng-app="attachedSkillManagerApp">
 <div data-ng-include data-src="'main-menu.html'"></div>
 <div ng-controller="attachedSkillListController">
+    <div data-ng-include data-src="'loader.html'"></div>
 
     <table class="table table-striped">
         <tr>
@@ -143,9 +144,11 @@
     });
 
     app.controller("attachedSkillListController", function ($scope, $http) {
+        $scope.loader = true;
         $http.get('/attachedSkills').
         success(function (data) {
-            $scope.attachedSkills = data.attachedSkills.sort();
+            $scope.attachedSkills = data.attachedSkills;
+            $scope.loader = false;
         });
 
         $scope.deleteAttachedSkill = function (id) {
