--- a/public/views/attached_skills_manager.html
+++ b/public/views/attached_skills_manager.html
@@ -16,6 +16,17 @@
 <div ng-controller="attachedSkillListController">
     <div data-ng-include data-src="'loader.html'"></div>
 
+    <div class="row">
+        <div class="col-xs-offset-1 col-xs-2">
+            <p class="lead">
+                <strong>Поиск навыка:</strong>
+            </p>
+        </div>
+        <div class="col-xs-offset-2 col-xs-4">
+            <p class="lead"><input type="text" ng-model="search"></p>
+        </div>
+    </div>
+
     <table class="table table-striped">
         <tr>
             <th>Имя</th>
@@ -24,7 +35,7 @@
             <th>Деф.</th>
             <th></th>
         </tr>
-        <tr ng-repeat="attachedSkill in attachedSkills | orderBy : 'name'">
+        <tr ng-repeat="attachedSkill in attachedSkills | orderBy : 'name' | filter: search">
             <td style="vertical-align:middle;">{{ attachedSkill.name }}</td>
             <td style="vertical-align:middle;">
                 <div ng-if="attachedSkill.difficult">
