--- a/public/views/flaw_manager.html
+++ b/public/views/flaw_manager.html
@@ -15,6 +15,18 @@
 <div data-ng-include data-src="'main-menu.html'"></div>
 <div ng-controller="flawListController">
     <div data-ng-include data-src="'loader.html'"></div>
+
+    <div class="row">
+        <div class="col-xs-offset-1 col-xs-2">
+            <p class="lead">
+                <strong>Поиск навыка:</strong>
+            </p>
+        </div>
+        <div class="col-xs-offset-2 col-xs-4">
+            <p class="lead"><input type="text" ng-model="search"></p>
+        </div>
+    </div>
+
     <table class="table table-striped">
         <tr>
             <th>Имя</th>
@@ -22,7 +34,7 @@
             <th>Неоткл.</th>
             <th></th>
         </tr>
-        <tr ng-repeat="flaw in flaws | orderBy : 'name'">
+        <tr ng-repeat="flaw in flaws | orderBy : 'name' | filter : search">
             <td style="vertical-align:middle;">{{ flaw.name }}</td>
             <td style="vertical-align:middle;">{{ flaw.cost }}</td>
             <td style="vertical-align:middle;">
