--- a/public/views/inherent_manager.html
+++ b/public/views/inherent_manager.html
@@ -15,8 +15,20 @@
 <div data-ng-include data-src="'main-menu.html'"></div>
 <div ng-controller="inherentListController">
     <div data-ng-include data-src="'loader.html'"></div>
+
+    <div class="row">
+        <div class="col-xs-offset-1 col-xs-2">
+            <p class="lead">
+                <strong>Поиск навыка:</strong>
+            </p>
+        </div>
+        <div class="col-xs-offset-2 col-xs-4">
+            <p class="lead"><input type="text" ng-model="search"></p>
+        </div>
+    </div>
+
     <table class="table table-striped">
-        <tr ng-repeat="inherent in inherents | orderBy : 'name'">
+        <tr ng-repeat="inherent in inherents | orderBy : 'name' | filter : search">
             <td style="vertical-align:middle;">{{ inherent.name }}</td>
             <td style="vertical-align:middle;">1/{{ inherent.probability }}</td>
             <td style="vertical-align:middle;">{{ inherent.min_limit}}</td>
