--- a/public/views/trigger_skills_manager.html
+++ b/public/views/trigger_skills_manager.html
@@ -15,6 +15,18 @@
 <div data-ng-include data-src="'main-menu.html'"></div>
 <div ng-controller="triggerSkillListController">
     <div data-ng-include data-src="'loader.html'"></div>
+
+    <div class="row">
+        <div class="col-xs-offset-1 col-xs-2">
+            <p class="lead">
+                <strong>Поиск навыка:</strong>
+            </p>
+        </div>
+        <div class="col-xs-offset-2 col-xs-4">
+            <p class="lead"><input type="text" ng-model="search"></p>
+        </div>
+    </div>
+
     <table class="table table-striped">
         <tr>
             <th style="vertical-align:middle; text-align: center;">Имя</th>
@@ -22,7 +34,7 @@
             <th>Сл.</th>
             <th></th>
         </tr>
-        <tr ng-repeat="triggerSkill in triggerSkills | orderBy : 'name'">
+        <tr ng-repeat="triggerSkill in triggerSkills | orderBy : 'name' | filter : search">
             <td style="vertical-align:middle; text-align: center;">
                 <a href="/views/trigger_skill.html?id={{triggerSkill.id}}" class="btn btn-link" role="button">
                     {{ triggerSkill.name }}
