--- a/public/views/index.html
+++ b/public/views/index.html
@@ -31,7 +31,7 @@
                         <span class="caret"></span></button>
                     <ul class="dropdown-menu dropdown-menu-right">
                         <li><a href="/views/create_personage.html?id={{personage.id}}">Продолжить создание</a></li>
-                        <li><a href="#">Редактировать</a></li>
+                        <li><a href="/views/edit_personage.html?id={{personage.id}}">Редактировать</a></li>
                         <li><a href="#" ng-click="deletePersonage(personage.id)">х</a></li>
                     </ul>
                 </div>
