--- a/public/views/inherent_manager.html
+++ b/public/views/inherent_manager.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col-xs-offset-1 col-xs-2">
             <p class="lead">
-                <strong>Поиск навыка:</strong>
+                <strong>Поиск особенности:</strong>
             </p>
         </div>
         <div class="col-xs-offset-2 col-xs-4">
