ERILON-40 Добавить справочник заклинаний

--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -14,6 +14,7 @@
                 <li class="list-group-item"><a href="/views/flaw_manager.html">Недостатки</a></li>
                 <li class="list-group-item"><a href="/views/attached_skills_manager.html">Прикрепленные навыки</a></li>
                 <li class="list-group-item"><a href="/views/trigger_skills_manager.html">Тригерные навыки</a></li>
+                <li class="list-group-item"><a href="/views/spells_manager.html">Заклинания</a></li>
                 <li class="list-group-item"><a href="/">Персонажи</a></li>
             </ul>
         </div>
