--- a/public/views/attached_skills_manager.html
+++ b/public/views/attached_skills_manager.html
@@ -115,6 +115,16 @@
         </div>
 
         <div class="form-group">
+            <label class="control-label col-sm-2" for="default_skill">Заклинания:</label>
+
+            <div class="col-sm-10">
+                <div class="pull-left">
+                    <input type="checkbox" class="form-control" id="spells_connected" ng-model="spells_connected">
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
             <label class="control-label col-sm-2" for="description">Описание:</label>
 
             <div class="col-sm-10">
@@ -147,7 +157,8 @@
                 description: $scope.description,
                 difficult: $scope.difficult,
                 theoretical: $scope.theoretical,
-                default_skill: $scope.default_skill
+                default_skill: $scope.default_skill,
+                spells_connected: $scope.spells_connected
             }).success(function (data) {
                 location.reload();
             });
