--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -79,7 +79,7 @@
                     </a>
                 </h4>
 
-                <div id="attributes" class="panel-collapse collapse in">
+                <div id="attributes" class="panel-collapse collapse">
                     <div class="panel-body">
                         <table class="table table-striped">
                             <tr ng-repeat="personageAttribute in personageAttributes | orderBy : 'Attribute.name'">
@@ -313,7 +313,7 @@
                                                     </td>
 
                                                     <td>
-                                                        <input type="checkbox" class="form-control" id="tutored"
+                                                        <input type="checkbox" class="form-control" id="triggerSkillTutored"
                                                                ng-model="personageTriggerSkill.tutored">
                                                     </td>
 
@@ -726,6 +726,73 @@
 
             <div class="panel panel-default">
                 <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#spells">
+                        <div class="panel-heading">
+                            Заклинания
+                        </div>
+                    </a>
+                </h4>
+                <div id="spells" class="panel-collapse collapse in">
+                    <div class="panel-body">
+
+                        <div ng-repeat="school in schools | orderBy : 'name'">
+                            <div class="panel-group">
+
+                                <div class="panel panel-default">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" href="#spells{{school.id}}">
+                                            <div class="panel-heading">
+                                                {{school.name}}
+                                            </div>
+                                        </a>
+                                    </h4>
+                                    <div id="spells{{school.id}}" class="panel-collapse collapse in">
+                                        <div class="panel-body">
+                                            <table class="table table-striped">
+                                                <tr>
+                                                    <th>Название</th>
+                                                    <th>Стоимость</th>
+                                                    <th>Уровень</th>
+                                                    <th>Учитель</th>
+                                                    <th></th>
+                                                </tr>
+                                                <tr ng-repeat="spell in school.Spells | orderBy : 'name'">
+                                                    <td style="vertical-align:middle;">
+                                                        {{spell.name}}
+                                                    </td>
+                                                    <td style="vertical-align:middle;">
+                                                        {{spell.cost}}
+                                                    </td>
+                                                    <td ng-show="isSpellAdded(spell.id)" style="vertical-align:middle;">
+                                                        {{relatedPersonageSpell.level}}
+                                                    </td>
+                                                    <td ng-show="isSpellAdded(spell.id)">
+                                                        <input type="checkbox" class="form-control" id="spellTutored"
+                                                               ng-model="relatedPersonageSpell.tutored">
+                                                    </td>
+                                                    <td ng-show="isSpellAdded(spell.id)">
+                                                        <button type="button" class="btn btn-link" ng-click="deletePersonageSpell(spell.id)">x</button>
+                                                    </td>
+                                                    <td ng-hide="isSpellAdded(spell.id)">
+                                                        <button type="button" class="btn btn-link" ng-click="addPersonageSpell(spell.id)">Добавить
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="panel panel-default">
+                <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#inventory">
                         <div class="panel-heading">
                             Инвентарь
@@ -804,6 +871,7 @@
         $scope.isMobile = isMobile.android.phone;
         $scope.meritAvailable = true;
         $scope.currentMerit = null;
+        $scope.relatedPersonageSpell = null;
 
         var merits = $q.defer();
         var inherents = $q.defer();
@@ -813,13 +881,15 @@
         var personage = $q.defer();
         var raceAttributes = $q.defer();
         var personageMerits = $q.defer();
+        var personageAttachedSkills = $q.defer();
 
         function success(data) {
+            $scope.recalculateMagicSchools();
             $scope.loader = false;
         }
 
         var all = $q.all([merits.promise, inherents.promise, flaws.promise, attachedSkills.promise,
-            triggerSkills.promise, personage.promise, raceAttributes.promise, personageMerits.promise]);
+            triggerSkills.promise, personage.promise, raceAttributes.promise, personageMerits.promise, personageAttachedSkills.promise]);
 
         all.then(success);
 
@@ -873,16 +943,68 @@
             $scope.personageAttributes = data.personage.PersonageAttributes;
             $scope.personageInherents = data.personage.PersonageInherents;
             $scope.personageFlaws = data.personage.PersonageFlaws;
-            $scope.personageAttachedSkills = data.personage.PersonageAttachedSkills;
             $scope.personageTriggerSkills = data.personage.PersonageTriggerSkills;
+            $scope.personageSpells = data.personage.PersonageSpells;
             personage.resolve();
         });
+
+        $scope.recalculateMagicSchools = function () {
+            $scope.schools = [];
+            angular.forEach($scope.personageAttachedSkills, function (personageAttachedSkill) {
+                if (personageAttachedSkill.AttachedSkill.spells_connected) {
+                    $scope.schools.push(personageAttachedSkill.AttachedSkill);
+                }
+            });
+        };
 
         $http.get('/personageMeritsByPersonageId/' + personageId).
         success(function (data) {
             $scope.personageMerits = data.personageMerits;
             personageMerits.resolve();
         });
+
+        $http.get('/personageAttachedSkillsByPersonageId/' + personageId).
+        success(function (data) {
+            $scope.personageAttachedSkills = data.personageAttachedSkills;
+            personageAttachedSkills.resolve();
+        });
+
+        $scope.isSpellAdded = function (id) {
+            var spellAdded = false;
+            angular.forEach($scope.personageSpells, function (personageSpell) {
+                if (personageSpell.Spell.id == id) {
+                    $scope.relatedPersonageSpell = personageSpell;
+                    spellAdded = true;
+                }
+            });
+            return spellAdded;
+        };
+
+        $scope.addPersonageSpell = function (id) {
+            $scope.loader = true;
+            $http.get('/spells/' + id).
+            success(function (result) {
+                $scope.personageSpells.push({
+                    Spell: result.spell,
+                    SpellId: id,
+                    PersonageId: personageId,
+                    level: 0,
+                    tutored: false
+                });
+                $scope.personage.experience = $scope.personage.experience - result.spell.cost;
+                $scope.loader = false;
+            });
+        };
+
+        $scope.deletePersonageSpell = function (id) {
+            angular.forEach($scope.personageSpells, function(personageSpell) {
+                if(personageSpell.Spell.id == id) {
+                    var index = $scope.personageSpells.indexOf(personageSpell);
+                    $scope.personageSpells.splice(index, 1);
+                    $scope.personage.experience = $scope.personage.experience + personageSpell.Spell.cost;
+                }
+            });
+        };
 
         $scope.increaseAttribute = function (id) {
             $scope.loader = true;
@@ -1610,6 +1732,7 @@
                 } else {
                     $scope.personage.experience = $scope.personage.experience - 1;
                 }
+                $scope.recalculateMagicSchools();
                 $scope.loader = false;
             });
         };
@@ -1650,6 +1773,7 @@
             } else {
                 $scope.personage.experience = $scope.personage.experience + personageAttachedSkill.value;
             }
+            $scope.recalculateMagicSchools();
             $scope.loader = false;
         };
 
@@ -1820,11 +1944,12 @@
             var personageFlawAllPromise = $q.defer();
             var personageAttachedSkillAllPromise = $q.defer();
             var personageTriggerSkillAllPromise = $q.defer();
+            var personageSpellsAllPromise = $q.defer();
 
             $q.all([personageAttributeAllPromise.promise, personage.promise,
                         personageMeritAllPromise.promise, personageInherentAllPromise.promise,
                         personageFlawAllPromise.promise, personageAttachedSkillAllPromise.promise,
-                        personageTriggerSkillAllPromise.promise])
+                        personageTriggerSkillAllPromise.promise, personageSpellsAllPromise.promise])
                     .then(success);
 
             $http.put('/personages/' + personageId, {
@@ -1958,6 +2083,31 @@
                     });
                     $q.all(addPromises).then(function () {
                         personageTriggerSkillAllPromise.resolve();
+                    });
+                });
+            });
+
+
+
+            $http.get('/personageSpellsByPersonageId/' + personageId).success(function (results) {
+                var deletePromises = [];
+
+                angular.forEach(results.personageSpells, function (personageSpell) {
+                    deletePromises.push($http.delete('/personageSpells/' + personageSpell.id));
+                });
+
+                $q.all(deletePromises).then(function () {
+                    var addPromises = [];
+                    angular.forEach($scope.personageSpells, function (personageSpell) {
+                        addPromises.push($http.post('/personageSpells', {
+                            spell_id: personageSpell.Spell.id,
+                            personage_id: personageId,
+                            level: personageSpell.level,
+                            tutored: personageSpell.tutored
+                        }));
+                    });
+                    $q.all(addPromises).then(function () {
+                        personageSpellsAllPromise.resolve();
                     });
                 });
             });
